--- a/README.org
+++ b/README.org
@@ -14,6 +14,4 @@ I'm a huge fan of the following languages, and can half-truthfully say I know th
 + Go
 
 ** Socials?
-You can contact me at any time at my email address: ~thedevraza@proton.me~
-
-https://pokepast.es/78071c7516695292
+You can contact me at any time at my email address: ~devraza@outlook.com~
