--- a/README.org
+++ b/README.org
@@ -1,17 +1,16 @@
 #+title: Hey There! I'm Devraza
 #+author: devraza
-#+description: A README for my GitHub.
+#+description: A README for my GitHub
 
 #+begin_quote
 Note: I've decided to move to a more sustainable scheme of working. This includes things such as my website and e-mail. Will post any changes to my workflow.
 #+end_quote
 
 ** What do I do?
-I'm a *huge* fan of open-source software, in particular, Linux, Rust, and Bubbletea
-I like to work with [[https://github.com/devraza/dianciemacs][dianciemacs]] (my very own minimal and elegant  Emacs configuration framework), [[https://archlinux.org][Arch GNU/Linux]], and [[https://hyprland.org][Hyprland]].
+I do a lot of work within open-source software: doing my fair share of contributions, no matter how small and working with popular projects such as [[https://github.com/charmbracelet/bubbletea][charmbracelet's bubbletea]], [[https://github.com/neovim/neovim][NeoVim]], and a few others.
 
-** Languages I use
-I'm a huge fan of the following languages, and can half-truthfully say I know them very well:
+** Programming Languages
+I'm a huge fan of the following languages, and can *half-truthfully* say I know them very well:
 + E-Lisp
 + Rust
 + Lua
